# case-analytics-engineer-pix

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
arquivos_teste/: bronze_layer.sql  silver_layer.sql
code/: core_account_ingestion.py  core_pix_ingestion.py  customer_ingestion.py
sql/: bronze_layer.sql  gold_layer.sql  inconsistencia_pix.sql
