[project]
name = "case-analytics-engineer-pix"
version = "0.1.0"
description = ""
authors = [
    {name = "caiohas",email = "caiohas.2908@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
